<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<!-- Layout for the editor -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <!-- Name field -->
    <EditText
        android:id="@+id/edit_item_name"
        android:hint="@string/hint_item_name"
        android:inputType="textCapWords"
        style="@style/EditorFieldStyle" />

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/category_overview"
            style="@style/CategoryStyle" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="2">

            <!-- Input fields -->
            <RelativeLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent">

                <!-- Price field -->
                <EditText
                    android:id="@+id/edit_item_price"
                    android:hint="@string/hint_item_price"
                    android:inputType="number"
                    style="@style/EditorFieldStyle" />

                <!-- Units for price (euros) -->
                <TextView
                    android:id="@+id/label_price_units"
                    android:text="@string/unit_item_price"
                    style="@style/EditorUnitsStyle"/>
            </RelativeLayout>

            <!-- Quantity field -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/subtract_button"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:text="-"/>
                <EditText
                    android:id="@+id/edit_item_quantity"
                    android:hint="@string/hint_item_quantity"
                    android:inputType="number"
                    style="@style/EditorFieldStyle" />
                <Button
                    android:id="@+id/add_button"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:text="+"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <!-- Supplier category -->
    <LinearLayout
        android:id="@+id/container_supplier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_supplier"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <!-- Weight field -->
            <EditText
                android:id="@+id/edit_item_supplier"
                android:hint="@string/hint_item_supplier"
                android:inputType="text"
                style="@style/EditorFieldStyle" />

            <EditText
                android:id="@+id/edit_item_supplier_contact"
                android:hint="@string/hint_item_supplier_contact"
                android:inputType="text"
                style="@style/EditorFieldStyle" />
            <Button
                android:id="@+id/contact_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_supplier_button_text"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
